# xrt-examples

./: README.md  set_env_vars.sh
ApplicationComponent/: Makefile  README.md  app-component.c  app-component.h
ApplicationComponent/app-component/: Makefile  app-component.c
ApplicationComponent/deployment/config/: app_component.json  data_log_exporter.json  lua.json  main.json  mqtt_bridge.json  multiply.lua  virtual.json  virtual_device_service.json
ApplicationComponent/deployment/profiles/: device-virtual.json  device-virtual1.json  device-virtual2.json  (+1 more)
ApplicationComponent/docs/: README.md
ApplicationComponentExample/: Makefile
ApplicationComponentExample/app-component/: app-component.c
ApplicationComponentExample/config/: main.json  mqtt_exporter.json  multiple.lua  virtual_device_service.json
ApplicationComponentExample/docs/: README.md  XRT_Application_Component_Example
AzureSphere/: AzureSphereTutorial.md  CMakeLists.txt  CMakeSettings.json  Damocles2-Mini.dtdl  Damocles2-Mini.json  Makefile  README.md  Xrt_Azure_Sphere_Test_License.lic  app_manifest.json  build.bat  damocles.xmpp  deploy.bat  deployd.bat  main.c  method.txt  setup_configs.sh  update.sh
AzureSphere/bacnet-simulator/: example.lua
AzureSphere/config/: azure-bacnet.json  azure-ethernetip.json  azure-modbus.json  azure-virtual.json  azure.json  bacnet.json  bus.json  ethernetip.json  influxdb_exporter.json  logexport.json  logger.json  lua.json  main-bacnet.json  main-ethernetip.json  main-modbus.json  main-virtual.json  main.json  modbus.json  mt3620.json  pool.json  transform.lua  udp-logger.json  virtual.json
AzureSphere/config/profiles/: Allen-Bradley-Azure.json  Allen-Bradley-General.json  Damocles2-Mini.json  bacnet-simulator.json  device-virtual.json  profiles-bacnet.json  profiles.json
AzureSphere/deployment/: azure-ethernetip.json
AzureSphere/deployment/config/: azure-virtual.json  bacnet.json  main-modbus.json  modbus.json  mt3620.json  virtual.json
AzureSphere/deployment/profiles/: Allen-Bradley-General.json  profiles-modbus.json
AzureSphere/docs/: bacnet-example.md  common.md  deploy-from-the-cloud.md  ethernetip-example.md  modbus-example.md  setup-config-files.md  ubuntu-build.md  ubuntu-deploy-debug.md  ubuntu-deploy-deploy.md  ubuntu-installation.md  virtual-example.md  vscode-build.md  windows-build.md  windows-deploy-debug.md  windows-installation.md
AzureSphere/mt3620-dk/: app_manifest.json
AzureSphere/mt3620-g100/: app_manifest.json
AzureSphere/mt3620-sk/: app_manifest.json
AzureSphere/mt3620-sr620/: app_manifest.json
AzureSphere/static-configs/: CMakeLists.txt  Makefile  Readme.md  main.c
AzureSphere/static-configs/config/: azure-bacnet.json  azure-ethernetip.json  azure-modbus.json  azure-virtual.json  bacnet.json  bus.json  ethernetip.json  main-bacnet.json  main-ethernetip.json  main-modbus.json  main-virtual.json  modbus.json  virtual.json
AzureSphere/static-configs/config/profiles/: Allen-Bradley-Azure.json  Allen-Bradley-General.json  Damocles2-Mini.json  bacnet-simulator.json  device-virtual.json  profiles-ethernetip.json  profiles-virtual.json  profiles.json
AzureSphere/static-configs/mt3620-g100/: app_manifest.json
AzureSphere/static-configs/mt3620-sk/: app_manifest.json
AzureSphere/twin/: desired-bacnet.json  desired-ethernetip.json  desired-modbus.json  desired-virtual.json  desired.json  device-twin.py
AzureSphere/twin/functions/: DeviceToTwin.cs  TwinToDevice.cs  functions.csproj  host.json  local.settings.json
Bridge/mqtt/: README.md
Bridge/redis/: README.md
Bridges/mqtt/: README.md
Bridges/thrift/: README.md
CommandComponent/: README.md
CommandComponent/commands/: list_components.sh  read_component.sh  trigger_discovery.sh  update_component.sh
CommonCommands/: set_env_vars.sh
Container/: README.md
Container/config/: lua.json  main.json
Container/state/: schedules.json
DevSDK/: .gitignore  Makefile  README.md  envs.sh  example-device.c  example-device.h
DevSDK/config/: example_device_service.json  main.json
Device Services/opc-ua/: README.md
DeviceServices/: README.md
DeviceServices/bacnet-ip/: README.md
DeviceServices/bacnet-mstp/: README.md
DeviceServices/ble/: README.md
DeviceServices/canbus/: README.md
DeviceServices/ethercat/: README.md
DeviceServices/ethernet-ip/: README.md
DeviceServices/file/: README.md
DeviceServices/gps/: README.md
DeviceServices/interactive-walkthrough/: basic-operations.md  discovery.md  ds-getting-started-common.md  setup-xrt.md
DeviceServices/modbus/: CMakeLists.txt  README.md
DeviceServices/modbus-rtu/: README.md
DeviceServices/modbus-tcp/: README.md
DeviceServices/multiple-services/: README.md
DeviceServices/opc-ua/: README.md
DeviceServices/profinet/: README.md
DeviceServices/s7/: README.md
DeviceServices/virtual/: README.md
DeviceServices/zigbee/: README.md
Devices/linux/: README.md
Devices/odbc/: README.md
Exporters/azure/: README.md
Exporters/influxdb/: README.md
Exporters/mqtt/: README.md
Exporters/rest/: README.md
Exporters/sitewise/: README.md
Servers/opc-ua/: README.md  run_modbus_sim.sh
SimpleXRTComponentExample/: Makefile  env.sh
SimpleXRTComponentExample/component/: mycomponent.c  mycomponent.h
SimpleXRTComponentExample/config/: lua.json  main.json  mqtt_exporter.json  multiple.lua  mycomponent.json  virtual_device_service.json
SimpleXRTComponentExample/docs/: README.md  Simple_XRT_Component_Example
Simulators/bacnet/: README.md  device-service-example.lua  tutorial-generate-events.lua  tutorial-present-values.lua
Simulators/ble/: README.md  add-device.lua  device-service-example.lua  multiple-devices.lua
Simulators/opc-ua/: README.md  datatypes.lua  device-service-example.lua  event.lua  methodnodes.lua  multi-devices.lua  nodetypes.lua  prosys.lua  readWrite.lua  simulation.lua
Transforms/batch/: README.md
Transforms/batch_transform/: README.md
Tutorials/ChemicalTank/: README.md  docker-compose.yml
Tutorials/ChemicalTankWithDMG/: .gitignore  README.md  docker-compose.yml
(+1027 files in other folders)
