cmake_minimum_required (VERSION 3.10)
project (xrt-app C)

if (IS_DIRECTORY "/opt/azurespheresdk")
  set (SDK_ROOT "/opt/azurespheresdk")
else ()
  set (SDK_ROOT "C:/Program Files (x86)/Microsoft Azure Sphere SDK")
endif ()

azsphere_configure_tools (TOOLS_REVISION "${AZURE_SPHERE_TARGET_TOOLS_REVISION}")
azsphere_configure_api (TARGET_API_SET "${AZURE_SPHERE_TARGET_API_SET}")
set (SYSROOT "${SDK_ROOT}/Sysroots/${AZURE_SPHERE_TARGET_API_SET}")

add_executable (${PROJECT_NAME} main.c)

target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-azure-exporter.a)
target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-influxdb-exporter.a)
target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-log-exporter.a)
target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-transform.a)
target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-lua-transform.a lua)

message (STATUS "Building for ${BOARD} with ${DEVICE} device service")

if (${BOARD} STREQUAL "mt3620-g100")
  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-mt3620-g100-device.a)
  set (TARGET_CONFIG "mt3620.json")
elseif (${BOARD} STREQUAL "mt3620-dk")
  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-mt3620-dk-device.a)
  set (TARGET_CONFIG "mt3620_rdb.json")
elseif (${BOARD} STREQUAL "mt3620-sk")
  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-mt3620-sk-device.a)
  set (TARGET_CONFIG "avnet_mt3620_sk.json")
endif ()

if (${DEVICE} STREQUAL "modbus")
  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-modbus-device-service.a)
  set (DEVICE_CONFIG "config/modbus.json" "config/profiles/Damocles2-Mini.json")
  set (DRIVER modbus)
  add_definitions ("-DDEVICE_MODBUS")
elseif (${DEVICE} STREQUAL "bacnet")
  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-bacnet-ip-device-service.a)
  set (DEVICE_CONFIG "config/bacnet.json" "config/profiles/bacnet-simulator.json")
  set (DRIVER bacnet-ip)
  add_definitions ("-DDEVICE_BACNET")
elseif (${DEVICE} STREQUAL "virtual")
  target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-virtual-device-service.a)
  set (DEVICE_CONFIG "config/virtual.json" "config/profiles/device-virtual.json")
  add_definitions ("-DDEVICE_VIRTUAL")
endif ()

target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt-devsdk.a)
target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/xrt/lib/libxrt.a)
target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/iot/lib/libiot.a)
target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/thrift/lib/libthrift.a)
target_link_libraries (${PROJECT_NAME} ${SYSROOT}/opt/iotech/thrift/lib/libthrift-tcp.a)
target_link_libraries (${PROJECT_NAME} ${DRIVER} applibs azureiot curl pthread gcc_s c)

target_include_directories (${PROJECT_NAME} PRIVATE ${SYSROOT}/opt/iotech/xrt/include/)
target_include_directories (${PROJECT_NAME} PRIVATE ${SYSROOT}/opt/iotech/iot/include/)

azsphere_target_hardware_definition (${PROJECT_NAME} TARGET_DIRECTORY "${SDK_ROOT}/HardwareDefinitions" TARGET_DEFINITION ${TARGET_CONFIG})
azsphere_target_add_image_package (${PROJECT_NAME} RESOURCE_FILES "config/main.json" "config/azure.json" "config/logger.json" "config/pool.json" "config/scheduler.json" "config/bus.json" "config/logexport.json" "config/mt3620.json" ${DEVICE_CONFIG} "config/profiles/profiles.json")
